урок 1 начало вёрстки

--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./scss/slyle.css">
 </head>
 <body>
-    <a class="link" href="https://github.com/StasBeep">Перейди</a>
-    Открыть
+    <!--<div></div>-->
+    <header class="hblock">
+        <img src="./image/logotip-les.png" alt="logo">
+        <ul class="hblock-menu">
+            <li class="hblock-menu-li">Киев</li>
+            <li class="hblock-menu-li">Каталог товаров</li>
+            <li class="hblock-menu-li">Где купить</li>
+            <li class="hblock-menu-li">Монтаж</li>
+            <li class="hblock-menu-li">Клиенты</li>
+            <li class="hblock-menu-li">Партнёрам</li>
+            <li class="hblock-menu-li">О нас</li>
+            <li class="hblock-menu-li">Рус</li>
+            <li class="hblock-menu-li">Укр</li>
+        </ul>
+    </header> 
 </body>
 </html>
