--- a/index.html
+++ b/index.html
@@ -1,27 +1,47 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./scss/slyle.css">
+    <title>Online Shcool</title>
+    <!--Подключение стилей по умолчанию для всех тегов-->
+    <link rel="stylesheet" href="../css/normalize.css">
+    <!--Подключение стилей для самого сайта-->
+    <link rel="stylesheet" href="../css/style.css">
+    <!--Подключение скриптов-->
+    <script src="../src/index.js" defer></script>
 </head>
+
 <body>
-    <!--<div></div>-->
-    <header class="hblock">
-        <img src="./image/logotip-les.png" alt="logo">
-        <ul class="hblock-menu">
-            <li class="hblock-menu-li">Киев</li>
-            <li class="hblock-menu-li">Каталог товаров</li>
-            <li class="hblock-menu-li">Где купить</li>
-            <li class="hblock-menu-li">Монтаж</li>
-            <li class="hblock-menu-li">Клиенты</li>
-            <li class="hblock-menu-li">Партнёрам</li>
-            <li class="hblock-menu-li">О нас</li>
-            <li class="hblock-menu-li">Рус</li>
-            <li class="hblock-menu-li">Укр</li>
-        </ul>
-    </header> 
+    <!--обёртка для всего содержимого, чтобы прижать footer к нижней части-->
+    <div class="wrapper-forcontent">
+        <!--Содержимое сайта без подвала (нужно для прижатия подвала к нижней части)-->
+        <div class="content-without-footer">
+
+            <!--Шапка сайта-->
+            <header>
+                
+            </header>
+
+            <!--Основная часть-->
+            <main>
+                <!--Первая секция основной части-->
+                <section>
+
+                </section>
+                <!--Вторая секция-->
+                <section>
+
+                </section>
+            </main>
+        </div>
+
+        <!--Подвал сайта-->
+        <footer>
+
+        </footer>
+    </div>
 </body>
+
 </html>
