--- a/index.html
+++ b/index.html
@@ -5,23 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Shcool</title>
-    <!--Подключение стилей по умолчанию для всех тегов-->
-    <link rel="stylesheet" href="../css/normalize.css">
     <!--Подключение стилей для самого сайта-->
-    <link rel="stylesheet" href="../css/style.css">
-    <!--Подключение скриптов-->
-    <script src="../src/index.js" defer></script>
+    <link rel="stylesheet" href="./css/slyle.css">
 </head>
 
 <body>
     <!--обёртка для всего содержимого, чтобы прижать footer к нижней части-->
-    <div class="wrapper-forcontent">
+    <div class="wrapper wrapper-forcontent">
         <!--Содержимое сайта без подвала (нужно для прижатия подвала к нижней части)-->
         <div class="content-without-footer">
 
             <!--Шапка сайта-->
             <header>
-                
+                <a href="#">
+                    <img src="./image/logo.png" alt="logo">
+                    <span>Product</span>
+                </a>
+                <nav>
+                    <li>Product</li>
+                    <li>Customers</li>
+                    <li>Pricing</li>
+                    <li>Resources</li>
+                    <li>
+                        <button>
+                            Sign in
+                        </button>
+                    </li>
+                    <li>
+                        <button>
+                            Sign up
+                        </button>
+                    </li>
+                    <li>
+                        <button>
+                            <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M12 22C17.514 22 22 17.514 22 12C22 6.486 17.514 2 12 2C6.486 2 2 6.486 2 12C2 17.514 6.486 22 12 22ZM12 4C16.411 4 20 7.589 20 12C20 16.411 16.411 20 12 20C7.589 20 4 16.411 4 12C4 7.589 7.589 4 12 4Z" />
+                                <path d="M19 12C19 8.134 15.865 5 12 5V19C15.865 19 19 15.866 19 12Z" />
+                            </svg>
+                        </button>
+                    </li>
+                </nav>
             </header>
 
             <!--Основная часть-->
