--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
         <div class="content-without-footer">
 
             <!--Шапка сайта-->
-            <header>
-                <a href="#">
-                    <img src="./image/logo.png" alt="logo">
-                    <span>Product</span>
+            <header class="header">
+                <a class="header-logo" href="#">
+                    <img class="header-logo-img" src="./image/logo.png" alt="logo">
+                    <span class="header-logo-text">Product</span>
                 </a>
-                <nav>
-                    <li>Product</li>
-                    <li>Customers</li>
-                    <li>Pricing</li>
-                    <li>Resources</li>
-                    <li>
-                        <button>
+                <nav class="header-menu">
+                    <li class="header-menu-li">Product</li>
+                    <li class="header-menu-li">Customers</li>
+                    <li class="header-menu-li">Pricing</li>
+                    <li class="header-menu-li">Resources</li>
+                    <li class="header-menu-li">
+                        <button class="header-menu-li-btn">
                             Sign in
                         </button>
                     </li>
-                    <li>
-                        <button>
+                    <li class="header-menu-li">
+                        <button class="header-menu-li-btn">
                             Sign up
                         </button>
                     </li>
-                    <li>
-                        <button>
-                            <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <li class="header-menu-li">
+                        <button class="header-menu-li-light">
+                            <svg class="header-menu-li-light-svg" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M12 22C17.514 22 22 17.514 22 12C22 6.486 17.514 2 12 2C6.486 2 2 6.486 2 12C2 17.514 6.486 22 12 22ZM12 4C16.411 4 20 7.589 20 12C20 16.411 16.411 20 12 20C7.589 20 4 16.411 4 12C4 7.589 7.589 4 12 4Z" />
                                 <path d="M19 12C19 8.134 15.865 5 12 5V19C15.865 19 19 15.866 19 12Z" />
