--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Shcool</title>
+    <link rel="stylesheet" href="./css/normalize.css">
     <!--Подключение стилей для самого сайта-->
     <link rel="stylesheet" href="./css/slyle.css">
 </head>
