--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!--обёртка для всего содержимого, чтобы прижать footer к нижней части-->
-    <div class="wrapper wrapper-forcontent">
+    <div class="wrapper wrapper-container wrapper-forcontent">
         <!--Содержимое сайта без подвала (нужно для прижатия подвала к нижней части)-->
         <div class="content-without-footer">
 
@@ -39,7 +39,7 @@
                     </li>
                     <li class="header-menu-li">
                         <button class="header-menu-li-light">
-                            <svg class="header-menu-li-light-svg" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="header-menu-li-light-svg" width="24" height="24" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M12 22C17.514 22 22 17.514 22 12C22 6.486 17.514 2 12 2C6.486 2 2 6.486 2 12C2 17.514 6.486 22 12 22ZM12 4C16.411 4 20 7.589 20 12C20 16.411 16.411 20 12 20C7.589 20 4 16.411 4 12C4 7.589 7.589 4 12 4Z" />
                                 <path d="M19 12C19 8.134 15.865 5 12 5V19C15.865 19 19 15.866 19 12Z" />
