Назначение классов тегам 1. section заменил на article, по семантике 2. ссылке прописал атрибут target, для открытия страницы в новом окне,    при переходе по ссылке

--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
             <!--Основная часть-->
             <main>
                 <!--Первая секция основной части-->
-                <section>
-                    <span>Work at the speed of thought</span>
-                    <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to
+                <article class="face">
+                    <span class="face-title">Work at the speed of thought</span>
+                    <p class="face-text">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to
                         imagine your next user experience.</p>
-                    <figure>
-                        <button>Get started</button>
-                        <a href="#">Watch the Video</a>
+                    <figure class="face-transition">
+                        <button class="face-transition-btn">Get started</button>
+                        <a class="face-transition-link" href="#" target="_blank">Watch the Video</a>
                     </figure>
-                </section>
+                </article>
                 <!--Вторая секция-->
                 <section>
 
