--- a/index.html
+++ b/index.html
@@ -52,17 +52,18 @@
 
             <!--Основная часть-->
             <main>
-                <section>
-                    <span>Work at the speed
+                <section class="face">
+                    <span class="face-title">Work at the speed
                         of thought</span>
-                    <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to
+                    <p class="face-text">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to
                         imagine your next user experience.</p>\
-                    <button>Get started</button>
-                    <svg viewbox="0 0 17 19" xmlns="http://www.w3.org/2000/svg">
+                    <button class="face-btn">Get started</button>
+                    <svg class="face-svg" viewbox="0 0 17 19" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M15.8516 8.53032C16.591 8.96531 16.591 10.0347 15.8516 10.4697L2.1954 18.5027C1.44543 18.9439 0.5 18.4031 0.5 17.533V1.46697C0.5 0.596876 1.44543 0.0561381 2.1954 0.497293L15.8516 8.53032Z" />
                     </svg>
-                    <a href="#">Watch the video</a>
+                    <a class="face-link" href="#">Watch the video</a>
+                    
 
                 </section>
                 <!--Вторая секция-->
