--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M15.8516 8.53032C16.591 8.96531 16.591 10.0347 15.8516 10.4697L2.1954 18.5027C1.44543 18.9439 0.5 18.4031 0.5 17.533V1.46697C0.5 0.596876 1.44543 0.0561381 2.1954 0.497293L15.8516 8.53032Z" />
                     </svg>
-                    <a class="face-link" href="#">Watch the video</a>
+                    <a class="face-link" href="#" target="_blank">Watch the video</a>
                     
 
                 </section>
