--- a/index.html
+++ b/index.html
@@ -4,81 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Shcool</title>
-    <link rel="stylesheet" href="./css/normalize.css">
-    <!--Подключение стилей для самого сайта-->
-    <link rel="stylesheet" href="./css/slyle.css">
+    <title>College Sail</title>
+
+    <script src="./src/index.js"></script>
 </head>
 
 <body>
-    <!--обёртка для всего содержимого, чтобы прижать footer к нижней части-->
-    <div class="wrapper wrapper-container wrapper-forcontent">
-        <!--Содержимое сайта без подвала (нужно для прижатия подвала к нижней части)-->
-        <div class="content-without-footer">
-
-            <!--Шапка сайта-->
-            <header class="header">
-                <a class="header-logo" href="#">
-                    <img class="header-logo-img" src="./image/logo.png" alt="logo">
-                    <span class="header-logo-text">Product</span>
-                </a>
-                <nav class="header-menu">
-                    <li class="header-menu-li">Product</li>
-                    <li class="header-menu-li">Customers</li>
-                    <li class="header-menu-li">Pricing</li>
-                    <li class="header-menu-li">Resources</li>
-                    <li class="header-menu-li">
-                        <button class="header-menu-li-btn">
-                            Sign in
-                        </button>
-                    </li>
-                    <li class="header-menu-li">
-                        <button class="header-menu-li-btn">
-                            Sign up
-                        </button>
-                    </li>
-                    <li class="header-menu-li">
-                        <button class="header-menu-li-light">
-                            <svg class="header-menu-li-light-svg" width="24" height="24" viewbox="0 0 24 24"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M12 22C17.514 22 22 17.514 22 12C22 6.486 17.514 2 12 2C6.486 2 2 6.486 2 12C2 17.514 6.486 22 12 22ZM12 4C16.411 4 20 7.589 20 12C20 16.411 16.411 20 12 20C7.589 20 4 16.411 4 12C4 7.589 7.589 4 12 4Z" />
-                                <path d="M19 12C19 8.134 15.865 5 12 5V19C15.865 19 19 15.866 19 12Z" />
-                            </svg>
-                        </button>
-                    </li>
-                </nav>
-            </header>
-
-            <!--Основная часть-->
-            <main>
-                <!--Первая секция основной части-->
-                <article class="face">
-                    <span class="face-title">Work at the speed of thought</span>
-                    <p class="face-text">Tools, tutorials, design and innovation experts, all in one place! The most
-                        intuitive way to
-                        imagine your next user experience.</p>
-                    <figure class="face-transition">
-                        <button class="face-transition-btn">Get started</button>
-                        <svg class="face-transition-svg" viewbox="0 0 17 19" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M15.8516 8.53032C16.591 8.96531 16.591 10.0347 15.8516 10.4697L2.1954 18.5027C1.44543 18.9439 0.5 18.4031 0.5 17.533V1.46697C0.5 0.596876 1.44543 0.0561381 2.1954 0.497293L15.8516 8.53032Z" />
-                        </svg>
-                        <a class="face-transition-link" href="#" target="_blank">Watch the Video</a>
-                    </figure>
-                </article>
-                <!--Вторая секция-->
-                <section>
-
-                </section>
-            </main>
-        </div>
-
-        <!--Подвал сайта-->
-        <footer>
-
-        </footer>
-    </div>
+    
 </body>
 
 </html>
