Пояснения работы (первая)

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>College Sail</title>
 
-    <script src="./src/index.js"></script>
+    <script src="./src/index.js" defer></script>
 </head>
 
 <body>
-    
+    Результат : <span id="first">Привет</span>
 </body>
 
 </html>
