--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>College Sail</title>
-
-    <script src="./src/index.js" defer></script>
+    <link rel="stylesheet" href="./css/style.css">
+    
+    <script src="./src/index.js"></script>
 </head>
 
 <body>
