все пять лабораторных работ

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>College Sail</title>
     <link rel="stylesheet" href="./css/style.css">
     
-    <script src="./src/index.js"></script>
+    <!--<script src="./src/first.js" defer></script>-->
+    <!--<script src="./src/second.js" defer></script>-->
+    <!--<script src="./src/third.js"></script>-->
+    <!--<script src="./src/four.js"></script>-->
+    <script src="./src/five.js"></script>
 </head>
 
 <body>
