--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
 </head>
 
 <body>
-    <span>Work at the speed of thought</span>
-    <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next
-        user experience.</p>
-    <button>Get strted</button>
-    <svg width="17" height="19" viewBox="0 0 17 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd" clip-rule="evenodd"
-            d="M15.8516 8.53032C16.591 8.96531 16.591 10.0347 15.8516 10.4697L2.1954 18.5027C1.44543 18.9439 0.5 18.4031 0.5 17.533V1.46697C0.5 0.596876 1.44543 0.0561381 2.1954 0.497293L15.8516 8.53032Z"
-            fill="#02897A" />
-    </svg>
+    <div class="header">
+        <span class="header-title">Work at the speed of thought </span>
+        <p class="header-text">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your
+            next
+            user experience. </p>
+        <button class="header-button">Get started</button>
+        <svg class="header-arrow" width="17" height="19" viewBox="0 0 17 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M15.8516 8.53032C16.591 8.96531 16.591 10.0347 15.8516 10.4697L2.1954 18.5027C1.44543 18.9439 0.5 18.4031 0.5 17.533V1.46697C0.5 0.596876 1.44543 0.0561381 2.1954 0.497293L15.8516 8.53032Z"
+                fill="#02897A" />
+        </svg>
+ 
+        <a class="header-link" href="https://www.figma.com/file/pS0KnmQeYHoKPXXrocNBB8/Product?node-id=1%3A10&t=LIBZ1UIPM4SVFxhg-0"
+            target="_blank">Watch the Video</a>
+    </div>
 </body>
 
 </html>
