--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!--<script src="./src/second.js" defer></script>-->
     <!--<script src="./src/third.js"></script>-->
     <!--<script src="./src/four.js"></script>-->
-    <script src="./src/five.js"></script>
+    <script src="./src/five2.js"></script>
+    <!--<script src="./src/programma.js" type="module" defer></script>-->
 </head>
 
 <body>
