--- a/index.html
+++ b/index.html
@@ -6,17 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>College Sail</title>
     <link rel="stylesheet" href="./css/style.css">
-    
-    <!--<script src="./src/first.js" defer></script>-->
-    <!--<script src="./src/second.js" defer></script>-->
-    <!--<script src="./src/third.js"></script>-->
-    <!--<script src="./src/four.js"></script>-->
-    <script src="./src/dog2.js"></script>
-    <!--<script src="./src/programma.js" type="module" defer></script>-->
 </head>
 
 <body>
-    Результат : <span id="first">Привет</span>
+    <div class="header">
+        <div>
+            <img class="header-img" src="./img/logo.png" alt="logo">
+            <span class="header-title">Product</span>
+        </div>
+        <ol class="header-list">
+            <li class="header-list-li">Product</li>
+            <li class="header-list-li"> Customers</li>
+            <li class="header-list-li"> Pricing</li>
+            <li class="header-list-li">Resources</li>
+        </ol>
+        <div>
+            <button class="header-btnIn">Sign In</button>
+            <button class="header-btnUp">Sign Up</button>
+            <button class="header-btnlight">
+                <svg class="header-btnlight-svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M12 22C17.514 22 22 17.514 22 12C22 6.486 17.514 2 12 2C6.486 2 2 6.486 2 12C2 17.514 6.486 22 12 22ZM12 4C16.411 4 20 7.589 20 12C20 16.411 16.411 20 12 20C7.589 20 4 16.411 4 12C4 7.589 7.589 4 12 4Z"
+                        fill="#02897A" />
+                    <path d="M19 12C19 8.134 15.865 5 12 5V19C15.865 19 19 15.866 19 12Z" fill="#02897A" />
+                </svg>
+            </button>
+        </div>
+    </div>
 </body>
 
 </html>
