--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <div>
             <img class="header-img" src="./img/logo.png" alt="logo">
             <span class="header-title">Product</span>
@@ -24,16 +24,35 @@
             <button class="header-btnIn">Sign In</button>
             <button class="header-btnUp">Sign Up</button>
             <button class="header-btnlight">
-                <svg class="header-btnlight-svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                <svg class="header-btnlight-svg" width="24" height="24" viewbox="0 0 24 24">
                     <path
-                        d="M12 22C17.514 22 22 17.514 22 12C22 6.486 17.514 2 12 2C6.486 2 2 6.486 2 12C2 17.514 6.486 22 12 22ZM12 4C16.411 4 20 7.589 20 12C20 16.411 16.411 20 12 20C7.589 20 4 16.411 4 12C4 7.589 7.589 4 12 4Z"
-                        fill="#02897A" />
-                    <path d="M19 12C19 8.134 15.865 5 12 5V19C15.865 19 19 15.866 19 12Z" fill="#02897A" />
+                        d="M12 22C17.514 22 22 17.514 22 12C22 6.486 17.514 2 12 2C6.486 2 2 6.486 2 12C2 17.514 6.486 22 12 22ZM12 4C16.411 4 20 7.589 20 12C20 16.411 16.411 20 12 20C7.589 20 4 16.411 4 12C4 7.589 7.589 4 12 4Z" />
+                    <path d="M19 12C19 8.134 15.865 5 12 5V19C15.865 19 19 15.866 19 12Z" />
                 </svg>
             </button>
         </div>
-    </div>
+    </header>
+    <main>
+        <div>
+            <div>
+                <span>
+                    Work at the speed of thought
+                </span>
+                <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine
+                    your next user experience.</p>
+                <div>
+                    <button>
+                        Get started
+                    </button>
+                    <svg width="17" height="19" viewbox="0 0 17 19">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M15.8516 8.53032C16.591 8.96531 16.591 10.0347 15.8516 10.4697L2.1954 18.5027C1.44543 18.9439 0.5 18.4031 0.5 17.533V1.46697C0.5 0.596876 1.44543 0.0561381 2.1954 0.497293L15.8516 8.53032Z" />
+                    </svg>
+                    <a href="#">Watch the Video</a>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
