--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
             </button>
         </div>
     </header>
-    <main>
-        <div>
-            <div>
-                <span>
+    <main class="main">
+        <div class="appeal">
+            <div class="appeal-content">
+                <span class="appeal-content-title">
                     Work at the speed of thought
                 </span>
-                <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine
+                <p class="appeal-content-text">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine
                     your next user experience.</p>
-                <div>
-                    <button>
+                <div class="appeal-content-links">
+                    <button class="appeal-content-links-button">
                         Get started
                     </button>
-                    <svg width="17" height="19" viewbox="0 0 17 19">
+                    <svg class="appeal-content-links-svg" width="17" height="19" viewbox="0 0 17 19">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M15.8516 8.53032C16.591 8.96531 16.591 10.0347 15.8516 10.4697L2.1954 18.5027C1.44543 18.9439 0.5 18.4031 0.5 17.533V1.46697C0.5 0.596876 1.44543 0.0561381 2.1954 0.497293L15.8516 8.53032Z" />
                     </svg>
-                    <a href="#">Watch the Video</a>
+                    <a class="appeal-content-links-link" href="#">Watch the Video</a>
                 </div>
             </div>
         </div>
